--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                         
                         <!-- Educación actual -->
                         <div class="relative flex items-center mb-12">
-                            <div class="flex-shrink-0 w-16 h-16 bg-gradient-to-br from-[#118AB2] to-[#06D6A0] rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
+                            <div class="flex-shrink-0 w-16 h-16 circle-2024 rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
                                 2024
                             </div>
                             <div class="ml-8 md:ml-0 md:w-5/12 card education-card p-6 md:mr-8">
@@ -342,7 +342,7 @@
 
                         <!-- UX/UI Design - EducacionIT -->
                         <div class="relative flex items-center mb-12 md:flex-row-reverse">
-                            <div class="flex-shrink-0 w-16 h-16 bg-gradient-to-br from-[#FFD166] to-[#FF6B6B] rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
+                            <div class="flex-shrink-0 w-16 h-16 circle-2023 rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
                                 2023
                             </div>
                             <div class="ml-8 md:ml-0 md:w-5/12 card education-card p-6 md:ml-8">
@@ -374,7 +374,7 @@
 
                         <!-- UX/UI Design - Codo a Codo -->
                         <div class="relative flex items-center mb-12">
-                            <div class="flex-shrink-0 w-16 h-16 bg-gradient-to-br from-[#06D6A0] to-[#118AB2] rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
+                            <div class="flex-shrink-0 w-16 h-16 circle-2022 rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
                                 2022
                             </div>
                             <div class="ml-8 md:ml-0 md:w-5/12 card education-card p-6 md:mr-8">
@@ -407,7 +407,7 @@
 
                         <!-- Diseño Gráfico -->
                         <div class="relative flex items-center mb-12 md:flex-row-reverse">
-                            <div class="flex-shrink-0 w-16 h-16 bg-gradient-to-br from-[#FF6B6B] to-[#FFD166] rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
+                            <div class="flex-shrink-0 w-16 h-16 circle-2019 rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
                                 2019
                             </div>
                             <div class="ml-8 md:ml-0 md:w-5/12 card education-card p-6 md:ml-8">
@@ -440,7 +440,7 @@
 
                         <!-- Administración de Empresas -->
                         <div class="relative flex items-center">
-                            <div class="flex-shrink-0 w-16 h-16 bg-gradient-to-br from-[#118AB2] to-[#073B4C] rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
+                            <div class="flex-shrink-0 w-16 h-16 circle-ean rounded-full flex items-center justify-center text-white font-bold z-10 md:mx-auto">
                                 EAN
                             </div>
                             <div class="ml-8 md:ml-0 md:w-5/12 card p-6 md:mr-8">
@@ -459,21 +459,21 @@
                         <h3 class="text-2xl font-bold text-[#073B4C] text-center mb-12">Idiomas</h3>
                         <div class="grid md:grid-cols-3 gap-8 max-w-4xl mx-auto">
                             <div class="card p-6 text-center">
-                                <div class="w-16 h-16 bg-gradient-to-br from-[#118AB2] to-[#06D6A0] rounded-full flex items-center justify-center mx-auto mb-4">
+                                <div class="w-16 h-16 circle-es rounded-full flex items-center justify-center mx-auto mb-4">
                                     <span class="text-2xl">🇪🇸</span>
                                 </div>
                                 <h4 class="font-bold text-lg text-[#073B4C] mb-2">Español</h4>
                                 <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Nativo</span>
                             </div>
                             <div class="card p-6 text-center">
-                                <div class="w-16 h-16 bg-gradient-to-br from-[#FFD166] to-[#FF6B6B] rounded-full flex items-center justify-center mx-auto mb-4">
+                                <div class="w-16 h-16 circle-br rounded-full flex items-center justify-center mx-auto mb-4">
                                     <span class="text-2xl">🇧🇷</span>
                                 </div>
                                 <h4 class="font-bold text-lg text-[#073B4C] mb-2">Portugués</h4>
                                 <span class="bg-yellow-100 text-yellow-800 text-sm font-medium px-3 py-1 rounded-full">Intermedio</span>
                             </div>
                             <div class="card p-6 text-center">
-                                <div class="w-16 h-16 bg-gradient-to-br from-[#06D6A0] to-[#118AB2] rounded-full flex items-center justify-center mx-auto mb-4">
+                                <div class="w-16 h-16 circle-us rounded-full flex items-center justify-center mx-auto mb-4">
                                     <span class="text-2xl">🇺🇸</span>
                                 </div>
                                 <h4 class="font-bold text-lg text-[#073B4C] mb-2">Inglés</h4>
@@ -501,7 +501,7 @@
                         <!-- Resumen profesional -->
                         <div class="card p-8">
                             <div class="flex items-center mb-6">
-                                <div class="w-12 h-12 bg-gradient-to-br from-[#118AB2] to-[#06D6A0] rounded-full flex items-center justify-center mr-4">
+                                <div class="w-12 h-12 circle-perfil rounded-full flex items-center justify-center mr-4">
                                     <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
                                     </svg>
@@ -518,7 +518,7 @@
                         <!-- Experiencia destacada -->
                         <div class="card p-8">
                             <div class="flex items-center mb-6">
-                                <div class="w-12 h-12 bg-gradient-to-br from-[#FFD166] to-[#FF6B6B] rounded-full flex items-center justify-center mr-4">
+                                <div class="w-12 h-12 circle-experiencia rounded-full flex items-center justify-center mr-4">
                                     <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2-2v2m8 0V6a2 2 0 012 2v6a2 2 0 01-2 2H8a2 2 0 01-2-2V8a2 2 0 012-2h8z"></path>
                                     </svg>
