agregamos 1er proyecto real

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta name="description"
-        content="Portfolio de Andrea Pujol - Diseñadora UX/UI especializada en identidad visual, diseño editorial, packaging y experiencias digitales">
+        content="Portfolio de Andrea Pujol - Diseñadora UX/UI especializada en identidad visual, diseño, packaging y experiencias digitales">
     <meta name="keywords" content="diseño UX, diseño UI, identidad visual, packaging, diseño editorial, Andrea Pujol">
     <meta name="author" content="Andrea Pujol">
     <!-- Open Graph Meta Tags -->
@@ -96,10 +96,8 @@
                 </h1>
                 <p
                     class="font-subtitles text-base md:text-lg lg:text-xl text-secondary max-w-3xl mx-auto mb-6 md:mb-8 leading-relaxed px-4">
-                    Creando interfaces intuitivas y atractivas que conectan con las personas. Mi portafolio es un viaje
-                    a través de la
-                    <strong>identidad visual</strong>, el <strong>diseño editorial</strong>, el
-                    <strong>packaging</strong> y el <strong>UI/UX</strong>.
+                    Mi portafolio es tu pase a un viaje por la
+                    <strong>identidad visual</strong> y el <strong>diseño UX/UI,</strong> donde creo interfaces tan intuitivas como atractivas. Gracias a mi experiencia como<strong> montajista,</strong> cada proyecto es una narrativa que te conecta directamente con las personas.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-3 md:gap-4 justify-center items-center mt-6 md:mt-8 px-4">
                     <a href="#projects"
@@ -120,12 +118,12 @@
                     <div class="stat-card p-8 rounded-xl">
                         <h2 class="font-titles text-5xl font-bold stat-number mb-2">4+</h2>
                         <p class="text-gray-800 text-lg font-medium">Áreas de Especialización</p>
-                        <p class="text-gray-600 text-sm mt-2">Identidad Visual, Editorial, Packaging, UI/UX</p>
+                        <p class="text-gray-600 text-sm mt-2">Identidad Visual, Diseño UI/UX, Edición de Videos</p>
                     </div>
                     <div class="stat-card p-8 rounded-xl">
                         <h2 class="font-titles text-5xl font-bold stat-number mb-2">10+</h2>
                         <p class="text-gray-800 text-lg font-medium">Herramientas de Diseño</p>
-                        <p class="text-gray-600 text-sm mt-2">Adobe Creative Suite, Figma, Sketch y más</p>
+                        <p class="text-gray-600 text-sm mt-2">Adobe Illustrator, Adobe Photoshop, Figma y más</p>
                     </div>
                     <div class="stat-card p-8 rounded-xl">
                         <h2 class="font-titles text-5xl font-bold stat-number mb-2">100%</h2>
@@ -346,11 +344,69 @@
                 </div>
 
                 <!-- Nivel de competencia -->
-                <div class="mt-16 max-w-4xl mx-auto">
+                <div class="mt-16 max-w-5xl mx-auto">
                     <h3 class="font-subtitles text-2xl font-bold text-gray-800 text-center mb-12">Nivel de Competencia
                     </h3>
-                    <div class="grid md:grid-cols-2 gap-8">
+                    <div class="grid md:grid-cols-2 gap-12">
+                        <!-- Columna 1: Diseño Gráfico y Visual -->
                         <div class="space-y-6">
+                            <div class="text-center mb-8">
+                                <h4 class="font-bold text-lg text-[#073B4C] mb-2">🎨 Diseño Gráfico y Visual</h4>
+                                <div class="w-16 h-1 bg-gradient-primary mx-auto rounded-full"></div>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="flex justify-between mb-2">
+                                    <span class="font-semibold text-gray-800">Adobe Illustrator</span>
+                                    <span class="text-primary font-bold">95%</span>
+                                </div>
+                                <div class="w-full bg-gray-200 rounded-full h-3">
+                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 95%"></div>
+                                </div>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="flex justify-between mb-2">
+                                    <span class="font-semibold text-gray-800">Adobe Photoshop</span>
+                                    <span class="text-primary font-bold">95%</span>
+                                </div>
+                                <div class="w-full bg-gray-200 rounded-full h-3">
+                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 95%"></div>
+                                </div>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="flex justify-between mb-2">
+                                    <span class="font-semibold text-gray-800">Canva</span>
+                                    <span class="text-primary font-bold">99%</span>
+                                </div>
+                                <div class="w-full bg-gray-200 rounded-full h-3">
+                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 99%"></div>
+                                </div>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="flex justify-between mb-2">
+                                    <span class="font-semibold text-gray-800">Design Thinking</span>
+                                    <span class="text-primary font-bold">92%</span>
+                                </div>
+                                <div class="w-full bg-gray-200 rounded-full h-3">
+                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 92%"></div>
+                                </div>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="flex justify-between mb-2">
+                                    <span class="font-semibold text-gray-800">Metodologías Ágiles</span>
+                                    <span class="text-primary font-bold">92%</span>
+                                </div>
+                                <div class="w-full bg-gray-200 rounded-full h-3">
+                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 92%"></div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <!-- Columna 2: UX/UI, Desarrollo y Video -->
+                        <div class="space-y-6">
+                            <div class="text-center mb-8">
+                                <h4 class="font-bold text-lg text-[#118AB2] mb-2">💻 UX/UI, Desarrollo y Video</h4>
+                                <div class="w-16 h-1 bg-gradient-support mx-auto rounded-full"></div>
+                            </div>
                             <div class="skill-bar">
                                 <div class="flex justify-between mb-2">
                                     <span class="font-semibold text-gray-800">Figma</span>
@@ -371,31 +427,20 @@
                             </div>
                             <div class="skill-bar">
                                 <div class="flex justify-between mb-2">
-                                    <span class="font-semibold text-gray-800">Adobe Illustrator</span>
-                                    <span class="text-primary font-bold">95%</span>
+                                    <span class="font-semibold text-gray-800">CapCut</span>
+                                    <span class="text-primary font-bold">98%</span>
                                 </div>
                                 <div class="w-full bg-gray-200 rounded-full h-3">
-                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 95%"></div>
+                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 98%"></div>
                                 </div>
                             </div>
                             <div class="skill-bar">
                                 <div class="flex justify-between mb-2">
-                                    <span class="font-semibold text-gray-800">Adobe Photoshop</span>
-                                    <span class="text-primary font-bold">95%</span>
+                                    <span class="font-semibold text-gray-800">Adobe Premiere</span>
+                                    <span class="text-primary font-bold">85%</span>
                                 </div>
                                 <div class="w-full bg-gray-200 rounded-full h-3">
-                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 95%"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="space-y-6">
-                            <div class="skill-bar">
-                                <div class="flex justify-between mb-2">
-                                    <span class="font-semibold text-gray-800">Design Thinking</span>
-                                    <span class="text-primary font-bold">92%</span>
-                                </div>
-                                <div class="w-full bg-gray-200 rounded-full h-3">
-                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 92%"></div>
+                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 85%"></div>
                                 </div>
                             </div>
                             <div class="skill-bar">
@@ -405,24 +450,6 @@
                                 </div>
                                 <div class="w-full bg-gray-200 rounded-full h-3">
                                     <div class="bg-gradient-primary h-3 rounded-full" style="width: 60%"></div>
-                                </div>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="flex justify-between mb-2">
-                                    <span class="font-semibold text-gray-800">Metodologías Ágiles</span>
-                                    <span class="text-primary font-bold">92%</span>
-                                </div>
-                                <div class="w-full bg-gray-200 rounded-full h-3">
-                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 92%"></div>
-                                </div>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="flex justify-between mb-2">
-                                    <span class="font-semibold text-gray-800">CapCut</span>
-                                    <span class="text-primary font-bold">98%</span>
-                                </div>
-                                <div class="w-full bg-gray-200 rounded-full h-3">
-                                    <div class="bg-gradient-primary h-3 rounded-full" style="width: 98%"></div>
                                 </div>
                             </div>
                         </div>
@@ -540,7 +567,7 @@
                                 <!-- Botón Ver Certificado - LISTO PARA AGREGAR LINK -->
                                 <div class="flex items-center justify-between">
                                     <!-- REEMPLAZA "TU_ENLACE_CODO_A_CODO_AQUI" con el enlace real -->
-                                    <a href="TU_ENLACE_CODO_A_CODO_AQUI" target="_blank" rel="noopener noreferrer"
+                                    <a href="https://www.linkedin.com/in/andreapujoluxui/details/education/1635529516759/single-media-viewer/?profileId=ACoAABW8LAUBZp_vWLp5qM7FUCDV7IjpfSe52hM" target="_blank" rel="noopener noreferrer"
                                         class="certificate-btn">
                                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -578,7 +605,7 @@
                                 <!-- Botón Ver Certificado - LISTO PARA AGREGAR LINK -->
                                 <div class="flex items-center justify-between">
                                     <!-- REEMPLAZA "TU_ENLACE_UTN_AQUI" con el enlace real -->
-                                    <a href="TU_ENLACE_UTN_AQUI" target="_blank" rel="noopener noreferrer"
+                                    <a href="https://www.linkedin.com/in/andreapujoluxui/details/education/1635489073518/single-media-viewer/?profileId=ACoAABW8LAUBZp_vWLp5qM7FUCDV7IjpfSe52hM" target="_blank" rel="noopener noreferrer"
                                         class="certificate-btn">
                                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
