--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Andrea Pujol | Portafolio de Diseño UX/UI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="description"
         content="Portfolio de Andrea Pujol - Diseñadora UX/UI especializada en identidad visual, diseño, packaging y experiencias digitales">
     <meta name="keywords" content="diseño UX, diseño UI, identidad visual, packaging, diseño editorial, Andrea Pujol">
@@ -1084,7 +1084,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="js.js"></script>
+    <script src="js/js.js"></script>
 </body>
 
 </html>
