Boton hamburguesa funcional

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <body class="antialiased">
 
     <header class="nav-sticky bg-white/90 backdrop-blur-lg sticky top-0 z-50 shadow-sm">
-        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <!-- Solo el logo, sin enlace ni contorno -->
-            <img src="img/Portafolio.png" alt="Logo Andrea Pujol" class="h-32 w-auto object-contain"
-                style="max-height:128px; min-width:480px; border-radius:0; border:none; box-shadow:none; outline:none;" />
+        <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
+            <!-- Logo más pequeño -->
+            <img src="img/Portafolio.png" alt="Logo Andrea Pujol" class="h-16 w-auto object-contain"
+                style="max-height:64px; min-width:240px; border-radius:0; border:none; box-shadow:none; outline:none;" />
             <div class="hidden md:flex items-center space-x-6">
                 <a href="#about"
                     class="link-hover font-subtitles text-secondary hover:text-primary transition-colors font-medium">Sobre
@@ -65,7 +65,7 @@
                 <a href="#education"
                     class="block font-subtitles text-secondary hover:text-primary transition-colors font-medium">Certificados</a>
                 <a href="#curriculum"
-                    class="block font-subtitles text-secondary hover:text-primary transition-colors font-medium">Proyectos</a>
+                    class="block font-subtitles text-secondary hover:text-primary transition-colors font-medium">Currículum</a>
                 <a href="#projects"
                     class="block font-subtitles text-secondary hover:text-primary transition-colors font-medium">Proyectos</a>
                 <a href="#contact"
