Mejora en el touch de los modals para subir o scrollear hacia arriba desde cualquier parte de la pantalla

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <header class="nav-sticky bg-white/90 backdrop-blur-lg sticky top-0 z-50 shadow-sm">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <!-- Logo más pequeño -->
-            <img src="img/Portafolio.png" alt="Logo Andrea Pujol" class="h-16 w-auto object-contain"
-                style="max-height:64px; min-width:240px; border-radius:0; border:none; box-shadow:none; outline:none;" />
+            <!-- Logo agrandado -->
+            <img src="img/Portafolio.png" alt="Logo Andrea Pujol" class="h-32 w-auto object-contain"
+                style="max: height 108px;; min-width:280px; border-radius:0; border:none; box-shadow:none; outline:none;" />
             <div class="hidden md:flex items-center space-x-6">
                 <a href="#about"
                     class="link-hover font-subtitles text-secondary hover:text-primary transition-colors font-medium">Sobre
