actualización con proyectos reales

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://andreapujol.com">
     <!-- Favicons -->
-    <link rel="icon" type="image/x-icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎨</text></svg>">
+    <link rel="icon" type="image/png" href="img/Portafolio.png">
 </head>
 
 <body class="antialiased">
@@ -30,7 +29,7 @@
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <!-- Logo agrandado -->
             <img src="img/Portafolio.png" alt="Logo Andrea Pujol" class="h-32 w-auto object-contain"
-                style="max: height 108px;; min-width:280px; border-radius:0; border:none; box-shadow:none; outline:none;" />
+                style="max-height:108px; min-width:280px; border-radius:0; border:none; box-shadow:none; outline:none;" />
             <div class="hidden md:flex items-center space-x-6">
                 <a href="#about"
                     class="link-hover font-subtitles text-secondary hover:text-primary transition-colors font-medium">Sobre
