--- a/index.html
+++ b/index.html
@@ -707,11 +707,9 @@
                                 <h3 class="text-2xl font-bold text-[#073B4C]">Perfil Profesional</h3>
                             </div>
                             <p class="text-gray-600 leading-relaxed">
-                                Diseñadora UX/UI con sólida formación en diseño centrado en el usuario y experiencia en
-                                proyectos
-                                de identidad visual, packaging y diseño editorial. Combino creatividad con metodologías
-                                ágiles
-                                para crear experiencias digitales memorables y funcionales.
+                                Diseñadora UX/UI con experiencia en investigación de usuarios, prototipado de interfaces y diseño conversacional. 
+                                Apasionada por la creación de experiencias digitales centradas en el usuario, aplicando Design Thinking, User Research y 
+                                Metodologías Ágiles. Dominio de herramientas clave como Figma, Adobe XD, HTML, CSS y accesibilidad digital.
                             </p>
                         </div>
 
