Update de Diseñadora Freelance

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
                                     <h4 class="font-semibold text-[#073B4C]">Diseñadora Freelance</h4>
                                     <p class="text-[#118AB2] text-sm font-medium">2025 - Presente</p>
                                     <p class="text-gray-600 text-sm mt-2">Desarrollo de identidades visuales manual de marca,
-                                        diseño editorial y experiencias UX/UI para diversos clientes.</p>
+                                        diseño gráfico y experiencias UX/UI para diversos clientes.</p>
                                 </div>                                
                                 
                             </div>
