--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 
     <header class="nav-sticky bg-white/90 backdrop-blur-lg sticky top-0 z-50 shadow-sm">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <!-- Logo agrandado -->
-            <img src="img/Portafolio.png" alt="Logo Andrea Pujol" class="h-32 w-auto object-contain"
-                style="max-height:108px; min-width:280px; border-radius:0; border:none; box-shadow:none; outline:none;" />
+            <!-- Logo agrandado con funcionalidad de navegación -->
+            <a href="#hero" class="cursor-pointer transition-transform duration-300 hover:scale-105">
+                <img src="img/Portafolio.png" alt="Logo Andrea Pujol" class="h-32 w-auto object-contain"
+                    style="max-height:108px; min-width:280px; border-radius:0; border:none; box-shadow:none; outline:none;" />
+            </a>
             <div class="hidden md:flex items-center space-x-6">
                 <a href="#about"
                     class="link-hover font-subtitles text-secondary hover:text-primary transition-colors font-medium">Sobre
@@ -76,13 +78,13 @@
     <main>
         <section id="hero"
             class="hero-section py-16 md:py-24 lg:py-32 text-center bg-gradient-to-br from-white via-[#F7F9FB] to-white relative overflow-hidden min-h-screen flex items-center">
-            <!-- Elementos decorativos de fondo -->
+            <!-- Elementos decorativos de fondo con efectos morphing -->
             <div
-                class="absolute top-20 left-4 md:left-10 w-16 md:w-20 h-16 md:h-20 bg-support-yellow rounded-full opacity-20 animate-pulse">
+                class="absolute top-20 left-4 md:left-10 w-16 md:w-20 h-16 md:h-20 bg-support-yellow rounded-full opacity-20 animate-pulse floating-element morphing-shape">
             </div>
-            <div class="absolute bottom-20 right-4 md:right-10 w-24 md:w-32 h-24 md:h-32 bg-secondary rounded-full opacity-15 animate-pulse"
+            <div class="absolute bottom-20 right-4 md:right-10 w-24 md:w-32 h-24 md:h-32 bg-secondary rounded-full opacity-15 animate-pulse floating-element morphing-shape"
                 style="animation-delay: 1s;"></div>
-            <div class="absolute top-1/2 left-1/4 w-12 md:w-16 h-12 md:h-16 bg-primary rounded-full opacity-10 animate-pulse"
+            <div class="absolute top-1/2 left-1/4 w-12 md:w-16 h-12 md:h-16 bg-primary rounded-full opacity-10 animate-pulse floating-element morphing-shape"
                 style="animation-delay: 2s;"></div>
 
             <div class="container mx-auto px-4 md:px-6 relative z-10 w-full">
@@ -103,11 +105,11 @@
                 </p>
                 <div class="flex flex-col sm:flex-row gap-3 md:gap-4 justify-center items-center mt-6 md:mt-8 px-4">
                     <a href="#projects"
-                        class="w-full sm:w-auto bg-gradient-primary text-white px-6 md:px-8 py-3 md:py-4 rounded-full font-semibold hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 text-center">
+                        class="w-full sm:w-auto bg-gradient-primary text-white px-6 md:px-8 py-3 md:py-4 rounded-full font-semibold hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 text-center elastic-button liquid-button magnetic-element">
                         Ver mis proyectos
                     </a>
                     <a href="#contact"
-                        class="w-full sm:w-auto border-2 border-primary text-primary px-6 md:px-8 py-3 md:py-4 rounded-full font-semibold hover:bg-primary hover:text-white transition-all duration-300 text-center">
+                        class="w-full sm:w-auto border-2 border-primary text-primary px-6 md:px-8 py-3 md:py-4 rounded-full font-semibold hover:bg-primary hover:text-white transition-all duration-300 text-center elastic-button liquid-button magnetic-element">
                         Contactar conmigo
                     </a>
                 </div>
@@ -117,17 +119,17 @@
         <section id="stats" class="py-20 bg-gradient-to-r from-[#F7F9FB] to-white">
             <div class="container mx-auto px-6">
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-                    <div class="stat-card p-8 rounded-xl">
+                    <div class="stat-card p-8 rounded-xl premium-card magnetic-element">
                         <h2 class="font-titles text-5xl font-bold stat-number mb-2">4+</h2>
                         <p class="text-gray-800 text-lg font-medium">Áreas de Especialización</p>
                         <p class="text-gray-600 text-sm mt-2">Identidad Visual, Diseño UI/UX, Edición de Videos</p>
                     </div>
-                    <div class="stat-card p-8 rounded-xl">
+                    <div class="stat-card p-8 rounded-xl premium-card magnetic-element">
                         <h2 class="font-titles text-5xl font-bold stat-number mb-2">10+</h2>
                         <p class="text-gray-800 text-lg font-medium">Herramientas de Diseño</p>
                         <p class="text-gray-600 text-sm mt-2">Adobe Illustrator, Adobe Photoshop, Figma y más</p>
                     </div>
-                    <div class="stat-card p-8 rounded-xl">
+                    <div class="stat-card p-8 rounded-xl premium-card magnetic-element">
                         <h2 class="font-titles text-5xl font-bold stat-number mb-2">100%</h2>
                         <p class="text-gray-800 text-lg font-medium">Enfoque en el Usuario</p>
                         <p class="text-gray-600 text-sm mt-2">Design Thinking y metodologías centradas en UX</p>
@@ -959,14 +961,12 @@
                         </svg>
                         andrea.pujol@outlook.com.ar
                     </a>
-                    <a href="tel:+5491126439047"
+                    <a href="https://wa.me/5491126439047" target="_blank" rel="noopener noreferrer"
                         class="inline-flex items-center border-2 border-white text-white font-bold py-4 px-8 rounded-full hover:bg-white hover:text-[#073B4C] transition-all duration-300">
-                        <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
-                            </path>
+                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.097"/>
                         </svg>
-                        Llamar
+                        WhatsApp
                     </a>
                 </div>
 
